--- a/tab-groups.html
+++ b/tab-groups.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Tab board</title>
+    <title>TabMate</title>
+    <link rel="stylesheet" href="css/styles.css">
     <style>
-        .group { padding: 10px; margin-bottom: 10px; border-radius: 5px; }
-        .tab-list { margin-left: 20px; }
+        .group { margin-bottom: 10px; border-radius: 5px; }
         .title {
             display: flex;
             justify-content: center; /* Centers horizontally */
             align-items: center; /* Centers vertically */
             height: 100px; /* Adjust based on your layout */
         }
+        .tab-board-title {
+            display: inline-block;
+            position: relative;
+            padding: 10px 20px;
+            font-size: 48px;
+            font-weight: bold;
+            background: rgba(255, 255, 255, 0.6);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(255, 255, 255, 0.8);
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease-in-out, background 0.3s ease-in-out;
+        }
+        .tab-board-title:hover {
+            transform: scale(1.1);
+            background: rgba(255, 255, 255, 0.8);
+        }
     </style>
 </head>
-<body style="margin: 10px 10px 10px 10px">
+<body style="margin: 10px">
     <div class="title">
         <h1 class="tab-board-title fade-in">TabMate</h1>
     </div>
@@ -26,154 +42,11 @@
 
     <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
     <script src="js/d3.v7.min.js"></script>
-    <script src="tab-groups.js"></script>
-    <script src="dashboard.js"></script>
+    <script type="module" src="tab-groups.js"></script>
+    <script type="module" src="dashboard.js"></script>
 
     <!-- <h1>Tab Board - D3 Visualization</h1> -->
     
+    <button id="themeToggle" class="theme-toggle">Toggle Background</button>
 </body>
 </html>
-<style>
-    /* Title Styling */
-    .tab-board-title {
-        display: inline-block;
-        position: relative;
-        padding: 10px 20px;
-        font-size: 48px;
-        font-weight: bold;
-        background: rgba(255, 255, 255, 0.6); /* Semi-transparent background */
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(255, 255, 255, 0.8);
-        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); /* Glow effect */
-        transition: transform 0.3s ease-in-out, background 0.3s ease-in-out;
-    }
-
-    /* Title Hover Effect */
-    .tab-board-title:hover {
-        transform: scale(1.1);
-        background: rgba(255, 255, 255, 0.8);
-    }
-
-    /* Smooth fade-in effect */
-    .fade-in {
-        opacity: 0;
-        transform: translateY(10px);
-        animation: fadeIn 0.5s ease-out forwards;
-    }
-
-    @keyframes fadeIn {
-        from {
-            opacity: 0;
-            transform: translateY(10px);
-        }
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-
-    .group { 
-        padding: 10px; 
-        margin-bottom: 10px; 
-        border-radius: 5px; 
-    }
-
-    .tab-list { 
-        margin-left: 20px; 
-    }
-
-    /* Grid Layout for Cards */
-    #groups {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        gap: 15px;
-        justify-content: center;
-        align-items: start; /* Ensures cards below move up when space is available */
-        grid-auto-flow: dense; /* Enables filling empty spaces dynamically */
-    }
-
-    /* Card Styling */
-    .group {
-        padding: 15px;
-        border-radius: 8px;
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(10px);
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-        transition: transform 0.3s ease-in-out;
-    }
-
-    .group:hover {
-        transform: scale(1.05);
-    }
-
-    /* Dynamic width based on content */
-    .group[data-url-count="1"] { grid-column: span 1; }
-    .group[data-url-count="2"] { grid-column: span 1; }
-    .group[data-url-count="3"] { grid-column: span 2; }
-    .group[data-url-count="4"] { grid-column: span 3; }
-    .group[data-url-count="5"], .group[data-url-count="6"] { grid-column: span 4; }
-
-
-    /* Group Card Styling */
-    .group {
-        padding: 15px;
-        border-radius: 10px;
-        background: rgba(255, 255, 255, 0.8);
-        backdrop-filter: blur(10px);
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
-        transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-        min-width: 300px; /* Ensuring a decent width */
-        max-width: 400px;
-        overflow: hidden;
-    }
-
-    /* Hover Effect */
-    .group:hover {
-        transform: translateY(-3px); /* Slight lift effect */
-        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.3); /* More depth on hover */
-    }
-
-    /* Title Styling */
-    .group h3 {
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 10px;
-        text-align: center;
-        padding: 10px;
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        border-radius: 8px;
-    }
-
-    /* Tab List inside the Group */
-    .tab-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
-
-    /* Tab Item Styling */
-    .tab-list li {
-        display: flex;
-        align-items: center;
-        padding: 10px;
-        margin-bottom: 6px;
-        border-radius: 6px;
-        background: rgba(255, 255, 255, 0.9);
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
-        transition: background 0.2s ease-in-out, transform 0.2s ease-in-out;
-    }
-
-    /* Hover Effect for Tabs */
-    .tab-list li:hover {
-        background: rgba(0, 0, 0, 0.1);
-        transform: scale(1.03);
-    }
-
-    /* Dragging Effect */
-    .tab-list li.dragging {
-        opacity: 0.5;
-        transform: scale(0.95);
-    }
-
-</style>
