--- a/tab-groups.html
+++ b/tab-groups.html
@@ -3,50 +3,29 @@
 <head>
     <title>TabMate</title>
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-        .group { margin-bottom: 10px; border-radius: 5px; }
-        .title {
-            display: flex;
-            justify-content: center; /* Centers horizontally */
-            align-items: center; /* Centers vertically */
-            height: 100px; /* Adjust based on your layout */
-        }
-        .tab-board-title {
-            display: inline-block;
-            position: relative;
-            padding: 10px 20px;
-            font-size: 48px;
-            font-weight: bold;
-            background: rgba(255, 255, 255, 0.6);
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(255, 255, 255, 0.8);
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease-in-out, background 0.3s ease-in-out;
-        }
-        .tab-board-title:hover {
-            transform: scale(1.1);
-            background: rgba(255, 255, 255, 0.8);
-        }
-    </style>
 </head>
-<body style="margin: 10px">
-    <div class="title">
-        <h1 class="tab-board-title fade-in">TabMate</h1>
-    </div>
-    <div id="groups"></div>
-    
-    <div class="container" style="margin: 100px 350px;">
-        <!-- <div class="tooltip"></div> -->
-        <svg width="1000" height="600"></svg>
+<body>
+    <div class="view-toggles">
+        <button id="cardViewBtn" class="view-toggle active" title="Card View">
+            <span class="material-icons">dashboard</span>
+        </button>
+        <button id="graphViewBtn" class="view-toggle" title="Graph View">
+            <span class="material-icons">auto_graph</span>
+        </button>
     </div>
 
-    <!-- <script src="https://d3js.org/d3.v7.min.js"></script> -->
+    <div id="groups" class="view-section active"></div>
+    <div id="dashboard" class="view-section">
+        <div class="container">
+            <div class="tooltip"></div>
+            <svg width="1000" height="600"></svg>
+        </div>
+    </div>
+
+    <!-- Add Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="js/d3.v7.min.js"></script>
     <script type="module" src="tab-groups.js"></script>
     <script type="module" src="dashboard.js"></script>
-
-    <!-- <h1>Tab Board - D3 Visualization</h1> -->
-    
-    <button id="themeToggle" class="theme-toggle">Toggle Background</button>
 </body>
 </html>
